# actix-web-example

./: .env  Cargo.toml
migrations/: 20250914072808_initial_table.down.sql  20250914072808_initial_table.up.sql
src/: lib.rs
src/api/: mock_response.rs  mod.rs  schemas.rs
src/api/equifax_block/: router.rs
src/api/equifax_converter/: router.rs
src/api/equifax_fps/: router.rs
src/api/equifax_payment/: router.rs
src/api/equifax_scoring/: router.rs
src/api/equifax_v4/: router.rs
src/api/fincard/: router.rs
src/api/fincert/: router.rs
src/api/infosfera/: router.rs
src/api/vk/: router.rs
src/database/: mod.rs  models.rs
src/helpers/: errors.rs
src/middleware/: auth.rs
static/: equifax_block.xml  equifax_converter.xml  equifax_fps.xml  equifax_payment.xml  equifax_scoring.xml  equifax_v4.xml  fincard.xml  fincert.json  infosfera.xml  vk.json
