[package]
name = "mockservice"
version = "1.2.3"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = {version = "1", features = ["fs", "macros", "rt-multi-thread"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "derive" ] }
serde = "1.0.219"
serde_json = "1.0.143"
log = "0.4"
env_logger = "0.11.8"
sqlx-cli = { version = "0.8.6", features = ["postgres"] }

[lints.rust]
unsafe_code = "forbid"

[[bin]]
path = "src/bin/main.rs"
name = "mockservice"

[profile.dev]
codegen-units = 16  # Increase parallel compilation
incremental = true   # Enable incremental compilation

[build]
jobs = 2
rustc-wrapper = "sccache"
rustc = "rustc"
